<resources>
    <string name="app_name">Экскурсион</string>

    <string name="dialog_loading_text">Загрузка</string>

    <string name="error_forbidden_text">Ваша почта не подтверждена или вы были заблокированы</string>

    <string name="main_bottom_navigation_routes">Маршруты</string>
    <string name="main_bottom_navigation_maps">Карты</string>
    <string name="main_bottom_navigation_recommendation">Рекомендации</string>
    <string name="main_bottom_navigation_profile">Профиль</string>

    <string name="screen_choose_town_title">Выберите город</string>
    <string name="screen_choose_town_search_hint">Введите запрос…</string>

    <string name="screen_town_routes_title">Маршруты</string>

    <string name="dialog_network_error_title">Неполадки с интернетом</string>
    <string name="dialog_network_error_summary">Проверьте подключение или попробуйте подключиться к другой сети - мобильной или Wi-Fi</string>
    <string name="dialog_network_error_neutral_button">Понятно</string>
    <string name="dialog_network_error_data_requested">Пробуем снова…</string>

    <string name="screen_signup_email_hint">Ваш email</string>
    <string name="screen_signup_password_hint">Придумайте 8-значный пароль</string>
    <string name="screen_signup_password_confirm_hint">Повторите пароль</string>
    <string name="screen_signup_password_confirm_error">Пароли не совпадают</string>
    <string name="screen_signup_code_hint">Мы отправим вам код\nподтверждения</string>
    <string name="screen_signup_continue">Продолжить</string>
    <string name="screen_signup_continue_hint">Нажимая кнопку \“Продолжить\”, вы соглашаетесь \n с политикой конфиденциальности и на обработку \n персональных данных</string>
    <string name="screen_signup_email_error">Такая почта уже зарегистрирована!</string>

    <string name="screen_enter_code_title">Введите\nполученный код</string>
    <string name="screen_enter_code_hint">Введите 4-значный номер, который был \n отправлен на ваш email %1$s</string>
    <string name="screen_enter_code_continue">Продолжить</string>
    <string name="screen_enter_code_timer"><![CDATA[Отправить код повторно через <font color="%1$s"> %2$s </font>]]></string>
    <string name="screen_enter_code_send_code"><![CDATA[<font color="%1$s"><u>Отправить код повторно</u></font>]]></string>
    <string name="screen_enter_code_incorrect_code">Неверный код!</string>

    <string name="screen_signin_email_hint">Ваш email</string>
    <string name="screen_signin_password_hint">Ваш пароль</string>
    <string name="screen_signin_continue">Продолжить</string>
    <string name="screen_signin_continue_hint">Нажимая кнопку \“Продолжить\”, вы соглашаетесь \n с политикой конфиденциальности и на обработку \n персональных данных</string>
    <string name="screen_signin_error_password">Неверный пароль</string>
    <string name="screen_signin_error_email">Такая почта не зарегистрирована</string>

    <string name="screen_enter_user_data_title">Введите данные</string>
    <string name="screen_enter_user_data_name_title">Имя</string>
    <string name="screen_enter_user_data_name_hint">Иван</string>
    <string name="screen_enter_user_data_last_name_title">Фамилия</string>
    <string name="screen_enter_user_data_last_name_hint">Иванов</string>
    <string name="screen_enter_user_data_birth_date_title">Дата рождения</string>
    <string name="screen_enter_user_data_birth_date_day_hint">ДД</string>
    <string name="screen_enter_user_data_birth_date_month_hint">ММ</string>
    <string name="screen_enter_user_data_birth_date_year_hint">ГГГГ</string>
    <string name="screen_enter_user_data_button_continue">Продолжить</string>
    
    
    <string name="screen_choose_auth_method_signin_button">Вход</string>
    <string name="screen_choose_auth_method_signup_button">Регистрация</string>

    <string name="undefined_error">Что-то пошло не так…</string>
    <string name="screen_routes_paid_excursion">Платная экскурсия</string>

    <string name="screen_route_details_buy">Купить</string>
    <string name="screen_route_details_route">Маршрут</string>
    <plurals name="screen_route_details_locations_amount">
        <item quantity="one">%1$d объект</item>
        <item quantity="few">%1$d объекта</item>
        <item quantity="other">%1$d объектов</item>
    </plurals>
    <string name="screen_route_details_give_review">Оставить отзыв</string>
    <string name="screen_route_details_start_route">Начать маршрут</string>
    <string name="screen_route_details_duration">%1$d минут</string>
    <string name="screen_route_details_kilometers">%1$.2f КМ</string>
    <string name="screen_route_details_reviews">Отзывы</string>
    <string name="screen_route_details_show_all"><![CDATA[<font color="%1$s"><u>Посмотреть все</u></font>]]></string>

    <string name="screen_route_reviews_rating">%1$.2f из 5</string>
    <string name="screen_route_reviews_count">%1$d отзыва</string>

    <string name="screen_profile_title">Профиль</string>
    <string name="screen_profile_favorite">Избранное</string>
    <string name="screen_profile_faq">FAQ</string>
    <string name="screen_profile_notifications">Уведомления</string>
    <string name="screen_profile_decor">Оформление</string>
    <string name="screen_profile_feedback">Обратная связь</string>
    <string name="screen_profile_about_app">О приложении</string>
    <string name="screen_profile_privacy_policy">Политика конфиденциальности</string>
    <string name="screen_profile_logout"><u>Выйти</u></string>

    <string name="screen_redact_profile_title">Профиль</string>
    <string name="screen_redact_profile_name_title">Имя</string>
    <string name="screen_redact_profile_last_name_title">Фамилия</string>
    <string name="screen_redact_profile_email_title">Почта</string>
    <string name="screen_redact_profile_password_title">Пароль</string>
    <string name="screen_redact_profile_save">Сохранить</string>
    <string name="screen_redact_profile_remove_profile"><u>Удалить аккаунт</u></string>
    <string name="screen_redact_profile_edit_success">Успешно изменён!</string>

    <string name="screen_settings_notifications_title">Уведомления</string>
    <string name="screen_settings_notifications_hint">Вы можете включить уведомления \n для рассылки новостей</string>
    <string name="screen_settings_notifications_news">Новости</string>

    <string name="screen_settings_decor_title">Оформление</string>
    <string name="screen_settings_decor_hint">Вы можете включить темную \n или светлую тему</string>
    <string name="screen_settings_decor_theme">Тема</string>

    <string name="screen_faq_empty_list_title">Вопросы не найдены</string>
    <string name="screen_faq_empty_list_description">У матросов не вопросов</string>
    
    <string name="screen_feedback_title">Обратная связь</string>
    <string name="screen_feedback_text">Напишите нам, если у вас есть \n предложения или возникли вопросы</string>
    <string name="screen_feedback_link"><u>Ссылка на сайт</u></string>

    <string name="dialog_delete_profile_title">Вы действительно \n хотите удалить аккаунт?</string>
    <string name="dialog_delete_profile_summary">Предупреждаем, что после удаления \n восстановить аккаунт будет невозможно</string>
    <string name="dialog_delete_profile_confirm">Да</string>
    <string name="dialog_delete_profile_reject">Нет</string>

    <string name="dialog_logout_title">Вы действительно \n хотите выйти?</string>
    <string name="dialog_logout_confirm">Да</string>
    <string name="dialog_logout_reject">Нет</string>
    
    <string name="screen_empty_list_title">Ничего не удалось найти</string>
    <string name="screen_empty_list_description">Пожалуйста, попробуйте обновить страницу</string>

    <string name="screen_favorites_title">Избранное</string>
    <string name="screen_favorites_hotels">Где остановиться</string>
    <string name="screen_favorites_locations">Достопримечательности</string>
    <string name="screen_favorites_routes">Маршруты</string>
    <string name="screen_favorites_events">События</string>
    <string name="screen_favorites_clear"><u>Очистить</u></string>

    <string name="screen_map_search_hint">Введите запрос...</string>

    <string name="screen_tags_routes_title">Маршруты</string>
    <string name="screen_tags_recommendations_title">Рекомендации</string>

    <string name="screen_locations_title">Достопримечательности</string>
    
    <string name="screen_review_dialog_title">Вам понравилось? \n Оставьте отзыв</string>
    <string name="screen_review_dialog_hint">Написать отзыв</string>
    <string name="screen_review_dialog_send">Отправить</string>

    <string name="price">%1$d руб.</string>
    <string name="dialog_buy_route_confirm_text">Оплатить</string>f

    <string name="dialog_review_posted">Отзыв отправлен!</string>
    <string name="dialog_review_already_posted">Вы уже отправили отзыв.</string>

    <string name="underlined_text"><![CDATA[<u>%1$s</u>]]></string>
    <string name="screen_shops_title">Где поесть</string>
</resources>