<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent">

    <include
        android:id="@+id/header"
        layout="@layout/sublayout_back_button_header"
        style="@style/MatchParentWrapContent.MarginTop_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_title"
        style="@style/Text.H3.MarginTop_32dp.NoWidth"
        android:text="@string/screen_enter_user_data_name_title"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/name_input"
        app:layout_constraintEnd_toEndOf="@id/name_input" />

    <EditText
        android:id="@+id/name_input"
        style="@style/EditText.MarginHorizontal_25dp.MarginTop_16dp"
        android:hint="@string/screen_enter_user_data_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_title" />

    <TextView
        android:id="@+id/last_name_title"
        style="@style/Text.H3.MarginTop_24dp.NoWidth"
        android:text="@string/screen_enter_user_data_last_name_title"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        app:layout_constraintStart_toStartOf="@id/last_name_input"
        app:layout_constraintEnd_toEndOf="@id/last_name_input" />

    <EditText
        android:id="@+id/last_name_input"
        style="@style/EditText.MarginHorizontal_25dp.MarginTop_16dp"
        android:hint="@string/screen_enter_user_data_last_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_title" />

    <TextView
        android:id="@+id/birth_date_title"
        style="@style/Text.H3.MarginTop_24dp.NoWidth"
        android:text="@string/screen_enter_user_data_birth_date_title"
        app:layout_constraintTop_toBottomOf="@id/last_name_input"
        app:layout_constraintStart_toStartOf="@id/name_input"
        app:layout_constraintEnd_toEndOf="@id/name_input" />

    <EditText
        android:id="@+id/date_day_input"
        style="@style/EditText.MarginStart_25dp.MarginTop_16dp"
        android:layout_width="0dp"
        android:hint="@string/screen_enter_user_data_birth_date_day_hint"
        android:maxLength="2"
        android:inputType="date"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/date_month_input"
        app:layout_constraintEnd_toStartOf="@id/date_month_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birth_date_title" />

    <EditText
        android:id="@+id/date_month_input"
        style="@style/EditText.MarginStart_8dp.MarginTop_16dp"
        android:layout_width="0dp"
        android:hint="@string/screen_enter_user_data_birth_date_month_hint"
        android:maxLength="2"
        android:inputType="date"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/date_year_input"
        app:layout_constraintStart_toEndOf="@id/date_day_input"
        app:layout_constraintEnd_toEndOf="@id/date_year_input"
        app:layout_constraintTop_toBottomOf="@id/birth_date_title"/>

    <EditText
        android:id="@+id/date_year_input"
        style="@style/EditText.MarginStart_8dp.MarginEnd_25dp.MarginTop_16dp"
        android:layout_width="0dp"
        android:maxLength="4"
        android:inputType="date"
        android:hint="@string/screen_enter_user_data_birth_date_year_hint"
        app:layout_constraintStart_toEndOf="@id/date_month_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birth_date_title"/>

    <Button
        android:id="@+id/continue_button"
        style="@style/Button.Primary.MarginHorizontal_25dp.MarginTop_50dp"
        android:text="@string/screen_enter_user_data_button_continue"
        app:layout_constraintTop_toBottomOf="@id/date_month_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>