<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/MatchParentWrapContent"
        android:layout_marginTop="48dp">

        <TextView
            style="@style/Text.H2.Title"
            android:text="@string/screen_profile_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/settings_btn"
            style="@style/Icon"
            android:src="@drawable/ic_settings"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        style="@style/MatchParent"
        android:orientation="vertical">
        <LinearLayout
            style="@style/MatchParent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/MatchParentWrapContent"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="48dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    android:src="@drawable/placeholder_avatar"
                    android:scaleType="centerCrop"
                    android:layout_marginHorizontal="157dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/user_name" />

                <TextView
                    android:id="@+id/user_name"
                    style="@style/Text.H3.Bold.Center"
                    android:text="Андрей Суворов"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_avatar"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/favorite_btn"
                style="@style/Button.Forward.MarginHorizontal_25dp"
                android:text="@string/screen_profile_favorite" />

            <Button
                android:id="@+id/faq_btn"
                style="@style/Button.Forward.MarginHorizontal_25dp.MarginTop_16dp"
                android:text="@string/screen_profile_faq" />

            <Button
                android:id="@+id/notification_btn"
                style="@style/Button.Forward.MarginHorizontal_25dp.MarginTop_16dp"
                android:text="@string/screen_profile_notifications" />

            <Button
                android:id="@+id/decor_btn"
                style="@style/Button.Forward.MarginHorizontal_25dp.MarginTop_16dp"
                android:text="@string/screen_profile_decor" />

            <Button
                android:id="@+id/feedback_btn"
                style="@style/Button.Forward.MarginHorizontal_25dp.MarginTop_16dp"
                android:text="@string/screen_profile_feedback" />

            <Button
                android:id="@+id/about_app_btn"
                style="@style/Button.Forward.MarginHorizontal_25dp.MarginTop_16dp"
                android:text="@string/screen_profile_about_app" />

            <Button
                android:id="@+id/policy_btn"
                style="@style/Button.Forward.MarginHorizontal_25dp.MarginTop_16dp"
                android:text="@string/screen_profile_privacy_policy" />

            <TextView
                android:id="@+id/logout_btn"
                style="@style/Text.H5.Negative"
                android:text="@string/screen_profile_logout"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="48dp"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>