<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent">


    <include
        android:id="@+id/header"
        layout="@layout/sublayout_back_button_header"
        style="@style/MatchParentWrapContent.MarginTop_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit"
        style="@style/EditText.MarginHorizontal_25dp"
        android:layout_marginTop="126dp"
        android:inputType="textEmailAddress"
        android:hint="@string/screen_signup_email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/pass_edit"/>

    <EditText
        android:id="@+id/pass_edit"
        style="@style/EditText.MarginHorizontal_25dp.MarginTop_16dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/screen_signup_password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit" />

    <EditText
        android:id="@+id/pass_confirm_edit"
        style="@style/EditText.MarginHorizontal_25dp.MarginTop_16dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/screen_signup_password_confirm_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_edit" />
    
    <TextView
        android:id="@+id/password_confirm_error"
        style="@style/Text.H5.Negative"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:text="@string/screen_signup_password_confirm_error"
        app:layout_constraintTop_toBottomOf="@id/pass_confirm_edit"
        app:layout_constraintStart_toStartOf="@id/pass_confirm_edit"/>

    <TextView
        android:id="@+id/code_hint"
        style="@style/Text.H4"
        android:layout_marginTop="124dp"
        android:gravity="center"
        android:text="@string/screen_signup_code_hint"
        android:textColor="?attr/exc_text_color_hint"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_edit" />

    <Button
        android:id="@+id/continue_button"
        style="@style/Button.Primary.MarginHorizontal_25dp"
        android:layout_marginTop="40dp"
        android:text="@string/screen_signup_continue"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@id/continue_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_hint" />

    <TextView
        android:id="@+id/continue_hint"
        style="@style/Text.H5.NoWidth.Center"
        android:layout_marginVertical="24dp"
        android:text="@string/screen_signup_continue_hint"
        android:textColor="?attr/exc_text_color_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        android:id="@+id/loading"
        layout="@layout/sublayout_loading"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>