<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        style="@style/MatchParentWrapContent"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            style="@style/Icon.Back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            style="@style/Text.H2.Title"
            android:text="@string/screen_redact_profile_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/settings_btn"
            style="@style/Icon"
            android:src="@drawable/ic_settings"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/name_title"
        style="@style/Text.H3.MarginTop_32dp.NoWidth"
        android:text="@string/screen_redact_profile_name_title"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/name_input"
        app:layout_constraintEnd_toEndOf="@id/name_input" />

    <EditText
        android:id="@+id/name_input"
        style="@style/EditText.MarginHorizontal_25dp.MarginTop_8dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_title" />

    <TextView
        android:id="@+id/last_name_title"
        style="@style/Text.H3.MarginTop_24dp.NoWidth"
        android:text="@string/screen_redact_profile_last_name_title"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        app:layout_constraintStart_toStartOf="@id/last_name_input"
        app:layout_constraintEnd_toEndOf="@id/last_name_input" />

    <EditText
        android:id="@+id/last_name_input"
        style="@style/EditText.MarginHorizontal_25dp.MarginTop_8dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_title" />

    <TextView
        android:id="@+id/email_title"
        style="@style/Text.H3.MarginTop_24dp.NoWidth"
        android:text="@string/screen_redact_profile_email_title"
        app:layout_constraintTop_toBottomOf="@id/last_name_input"
        app:layout_constraintStart_toStartOf="@id/email_input"
        app:layout_constraintEnd_toEndOf="@id/email_input" />

    <EditText
        android:id="@+id/email_input"
        style="@style/EditText.MarginHorizontal_25dp.MarginTop_8dp"
        android:inputType="textEmailAddress"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_title" />

<!--    <TextView-->
<!--        android:id="@+id/password_title"-->
<!--        style="@style/Text.H3.MarginTop_24dp.NoWidth"-->
<!--        android:text="@string/screen_redact_profile_password_title"-->
<!--        app:layout_constraintTop_toBottomOf="@id/email_input"-->
<!--        app:layout_constraintStart_toStartOf="@id/password_input"-->
<!--        app:layout_constraintEnd_toEndOf="@id/password_input" />-->

<!--    <EditText-->
<!--        android:id="@+id/password_input"-->
<!--        style="@style/EditText.MarginHorizontal_25dp.MarginTop_8dp"-->
<!--        android:inputType="textPassword"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/password_title" />-->


    <Button
        android:id="@+id/save_button"
        style="@style/Button.Primary.MarginHorizontal_25dp.MarginTop_50dp"
        android:text="@string/screen_redact_profile_save"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/remove_profile"/>

    <TextView
        android:id="@+id/remove_profile"
        style="@style/Text.H5.Negative"
        android:text="@string/screen_redact_profile_remove_profile"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>