<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/WrapContent"
    android:background="@drawable/background_dialog">

    <!-- Width hardcoded here because of google views is the piece of shit and wrap_content just doesn't work here-->
    <ImageView
        android:id="@+id/close"
        style="@style/Icon.Margin_16dp.Padding_4dp"
        android:layout_width="20dp"
        app:srcCompat="@drawable/ic_cross"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/content"
        style="@style/MatchParentWrapContent"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="16dp"
        android:minWidth="400dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginTop="0dp">

        <TextView
            android:id="@+id/title"
            style="@style/Text.H2.Bold"
            android:gravity="center"
            android:text="@string/screen_review_dialog_title" />

        <com.fuzzproductions.ratingbar.RatingBar
            android:id="@+id/rating"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            app:starSize="24dp"
            app:starSpacing="10dp"
            app:isIndicator="false"
            app:rating="5"
            app:minAllowedStars="1"
            app:emptyDrawable="@drawable/ic_rating_star_empty"
            app:filledDrawable="@drawable/ic_rating_star_filled"
            app:layout_constraintStart_toStartOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintBottom_toBottomOf="@id/user_image" />
        
        <EditText
            android:id="@+id/review_text"
            style="@style/MatchParentWrapContent"
            android:layout_height="123dp"
            android:background="@drawable/background_review_edittext"
            android:hint="@string/screen_review_dialog_hint"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:textSize="12sp"
            android:padding="16dp"/>

        <Button
            android:id="@+id/confirm_button"
            style="@style/Button.Primary"
            android:text="@string/screen_review_dialog_send"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>